journal and magazines APIs created
