# api-docs/API.yaml
@@ -889,7 +889,7 @@ paths:
   /api/admin/book/add-main-category:
     post:
       tags:
-        - Book APIs - Admin
+        - Books APIs - Admin
       description: Add main book category
       security:
         - bearerAuth: []
@@ -920,7 +920,7 @@ paths:
   /api/admin/book/add-sub-category:
     post:
       tags:
-        - Book APIs - Admin
+        - Books APIs - Admin
       description: Add sub category for book
       security:
         - bearerAuth: []
@@ -954,7 +954,7 @@ paths:
   /api/admin/book/rename-category:
     put:
       tags:
-        - Book APIs - Admin
+        - Books APIs - Admin
       description: Rename a category for book
       security:
         - bearerAuth: []
@@ -988,7 +988,7 @@ paths:
   /api/admin/book/all-categories:
     get:
       tags:
-        - Book APIs - Admin
+        - Books APIs - Admin
       description: Get all category list of Books
       security:
         - bearerAuth: []
@@ -1659,6 +1659,443 @@ paths:
                   message:
                     type: string
                     example: course Post Search Successful
+
+
+#******
+#******
+#******
+#******
+#******
+#******
+
+
+
+#******
+#******
+#******
+#******
+#******
+#******
+
+  /api/admin/jnm/add-main-category:
+    post:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Add main jnm category
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties:
+                categoryName:
+                  type: string
+                  example: Science and myths
+                  
+      responses:
+        200:
+          description: Response on successful addition of main jnm category
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "jnm main category addition successful"
+
+
+  /api/admin/jnm/add-sub-category:
+    post:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Add sub category for jnm
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties:
+                categoryName:
+                  type: string
+                  example: Animal
+                parentID:
+                  type: string
+                  example: adfadf7987sdfs98798sdf
+                  
+      responses:
+        200:
+          description: Response on successful addition of sub category
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "jnm sub category addition successful"
+
+
+  /api/admin/jnm/rename-category:
+    put:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Rename a category for jnm
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties:
+                newName:
+                  type: string
+                  example: Animal
+                categoryID:
+                  type: string
+                  example: adfadf7987sdfs98798sdf
+                  
+      responses:
+        200:
+          description: Response on successful rename of a category
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Category rename successful"
+
+
+  /api/admin/jnm/all-categories:
+    get:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Get all category list of jnms
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Response on successful retrieval of all category list
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "All category list retrieval successful"
+
+
+  /api/admin/jnm:
+    post:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Create a jnm post
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content: 
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                thumbnail:
+                  type: string
+                  format: binary
+                files:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
+                title:
+                  type: string
+                  example: Earthquake Resistent Building Design
+                authors:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      firstName:
+                        type: string
+                        example: Palden
+                      lastName:
+                        type: string
+                        example: Sherpa
+                category:
+                  type: string
+                  example: journal or magazine
+                noOfPages:
+                  type: integer
+                  example: 50
+                edition:
+                  type: string
+                  example: 2nd(Updated)
+                abstract:
+                  type: string
+                  example: It is a structural design of building.
+                categoryID:
+                  type: string
+                  example: 5454sdfasd54545sdf
+                publisher:
+                  type: string
+                  example: Cambridge University Press
+                publicationDate:
+                  type: string
+                  example: 2020-01-02
+                keywords:
+                  type: array
+                  example: ["key1", "key2"]
+                youtubeLinks:
+                  type: array
+                  example: ["link1", "link2"]
+                doi:
+                  type: string
+                  example: 10.1371/journal.pgen.1001111
+      responses:
+        200:
+          description: Response on successful creation of jnm post.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnm Post Creation Successful
+
+
+  /api/admin/jnm/update-details/{jnmID}:
+    put:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Update a jnm post
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: jnmID
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: Earthquake Resistent Building Design
+                authors:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      firstName:
+                        type: string
+                        example: Palden
+                      lastName:
+                        type: string
+                        example: Sherpa
+                category:
+                  type: string
+                  example: journal or magazine
+                noOfPages:
+                  type: integer
+                  example: 50
+                edition:
+                  type: string
+                  example: 2nd(Updated)
+                abstract:
+                  type: string
+                  example: It is a structural design of building.
+                categoryID:
+                  type: string
+                  example: 5454sdfasd54545sdf
+                publisher:
+                  type: string
+                  example: Cambridge University Press
+                publicationDate:
+                  type: string
+                  example: 2020-01-02
+                keywords:
+                  type: array
+                  example: ["key1", "key2"]
+                youtubeLinks:
+                  type: array
+                  example: ["link1", "link2"]
+                doi:
+                  type: string
+                  example: 10.1371/journal.pgen.1001111
+      responses:
+        200:
+          description: Response on successful update of jnm post.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnm Post Update Successful
+
+
+  /api/admin/jnm/update-files/{jnmID}:
+    put:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Update a jnm files
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: jnmID
+      requestBody:
+        required: true
+        content: 
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                thumbnail:
+                  type: string
+                  format: binary
+                files:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
+                filesToBeDeleted:
+                  type: array
+                  format: ["file1", "file2"]
+                
+      responses:
+        200:
+          description: Response on successful update of jnm files.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnm files Update Successful
+
+
+  /api/admin/jnm/{jnmID}:
+    get:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Get details of a jnm
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: jnmID
+      responses:
+        200:
+          description: Response on successful retrieval of jnm details.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnm details retrieval Successful
+
+    delete:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Delete a jnm post
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: jnmID
+      responses:
+        200:
+          description: Response on successful deletion of jnm post.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnm Post Delete Successful
+
+
+  /api/admin/jnm/all-jnms/{categoryID}:
+    get:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Get all jnms of particular topic
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: categoryID
+        - in: query
+          name: skips
+        - in: query
+          name: limit
+      responses:
+        200:
+          description: Response on successful retrieval of jnms of particular categoryID.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnms of particular categoryID retrieval successful
+
+
+  /api/admin/jnm/search:
+    get:
+      tags:
+        - Journal And Magazine APIs - Admin
+      description: Search a jnm post
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: searchKey
+        - in: query
+          name: skips
+        - in: query
+          name: limit
+     
+      responses:
+        200:
+          description: Response on successful Search of jnm post.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: jnm Post Search Successful
+
+
+#******
+#******
+#******
+#******
+#******
+#******
 
 
 #******
